# oasis-server

./: DevNote.md  Dockerfile  LICENSE  README.md  conf.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
apps/auth/: auth_casbin.py  help.py  schema.py  view.py
apps/car/: model.py  schema.py  view.py
apps/controller/: model.py  schema.py  view.py
apps/dynamic/: model.py  schema.py  view.py
apps/emails/: view.py
apps/evaluation_criteria/: model.py  view.py
apps/job/: job_helper.py  model.py  schema.py  view.py
apps/job/report_tool/: report_helper.py
apps/light/: model.py  view.py
apps/log/: model.py  view.py
apps/scenario/: blueprint.init  model.py  scenario_helper.py  schema.py  view.py
apps/scenario/OpenscenarioTool/: actiongenerator.py  check_xosc.py  conditiongenerator.py  oasis_xml_to_json.py  openscenario.xosc  osxcgenerator.py  outer_xml_to_json.py  param_generalization.py  positiongenerator.py  run.py  scenarioobjectgenerator.py  utils.py
apps/sensor/: model.py  schema.py  view.py
apps/task/: model.py  schema.py
apps/traffic_flow/: model.py
apps/upload/: utils.py  view.py
apps/user/: model.py  schema.py  view.py
apps/weather/: model.py  view.py
config/: parse.py
core/: chinese_to_english.py  database.py  middleware.py  model.py  router.py  server.py  settings.py
docs/: default_sensors.json
migrations/models/: 1_20230816193120_None.py
sdgApp/Application/CarFacadeService/: AssembleService.py  CommandDTOs.py
sdgApp/Application/ScenariosFacadeService/: AssembleService.py  CommandDTOs.py
sdgApp/Application/car/: CommandDTOs.py  RespondsDTOs.py  usercase.py
sdgApp/Application/cars/: CommandDTOs.py  QueryDTOs.py  RespondsDTOs.py  usercase.py
sdgApp/Application/dynamic_scenes/: CommandDTOs.py  QueryDTOs.py  RespondsDTOs.py  usercase.py
sdgApp/Application/dynamics/: CommandDTOs.py  RespondsDTOs.py  usercase.py
sdgApp/Application/environments/: CommandDTOs.py  RespondsDTOs.py  usercase.py
sdgApp/Application/envs/: CommandDTOs.py  QueryDTOs.py  RespondsDTOs.py  (+1 more)
sdgApp/Interface/: server.py
src/: conf.ini  main.py
utils/: auth.py  custom_exc.py  logger.py  response_code.py  utils.py
(+201 files in other folders)
