[tool.poetry]
name = "sdg2app"
version = "0.1.0"
description = ""
authors = ["Cheng Fang"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.1"
uvicorn = "^0.16.0"
fastapi-users-db-mongodb = "^1.0.0"
shortuuid = "^1.0.8"
walrus = "^0.9.0"
tenacity = "^8.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
