[tool.poetry]
name = "sdg-server"
version = "0.4.1"
description = ""
authors = ["Cheng Fang"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.1"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
fastapi-users-db-mongodb = "^1.0.0"
shortuuid = "^1.0.8"
tenacity = "^8.0.1"
gunicorn = "^20.1.0"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
